{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 73,
  "lineage": "06e15b36-a933-cf4a-c55e-80f494525437",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "icmp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-05-17T01:15:21.786-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/neon-lock-277111/global/firewalls/icmp",
            "name": "icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/networks/vpctest",
            "priority": 1000,
            "project": "neon-lock-277111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/firewalls/icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ping"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-17T01:09:13.424-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/neon-lock-277111/global/firewalls/ssh",
            "name": "ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/networks/vpctest",
            "priority": 1000,
            "project": "neon-lock-277111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/firewalls/ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web",
              "worker"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-05-17T01:15:33.187-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/neon-lock-277111/global/firewalls/web",
            "name": "web",
            "network": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/networks/vpctest",
            "priority": 1000,
            "project": "neon-lock-277111",
            "self_link": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/firewalls/web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "north1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20200506",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/zones/europe-north1-a/disks/vm-north1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/neon-lock-277111/zones/europe-north1-a/instances/vm-north1",
            "instance_id": "2831329107527945810",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "bHTNjYQAAaU=",
            "metadata_startup_script": "#/bin/bash\napt-get update -y\napt-get install apache2 -y\nservice apache2 start",
            "name": "vm-north1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.228.245.228",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/networks/vpctest",
                "network_ip": "192.168.0.6",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/regions/europe-north1/subnetworks/subnet-0",
                "subnetwork_project": "neon-lock-277111"
              }
            ],
            "project": "neon-lock-277111",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/zones/europe-north1-a/instances/vm-north1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ping",
              "web"
            ],
            "tags_fingerprint": "ARn7EDMbcOQ=",
            "zone": "europe-north1-a"
          },
          "dependencies": [
            "google_compute_network.vpctest",
            "google_compute_subnetwork.subnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "north2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20200506",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/zones/europe-north1-a/disks/vm-north2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/neon-lock-277111/zones/europe-north1-a/instances/vm-north2",
            "instance_id": "482137139424611970",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "bHTNjYQAAaU=",
            "metadata_startup_script": "#/bin/bash\napt-get update -y\napt-get install apache2 -y\nservice apache2 start",
            "name": "vm-north2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.228.130.138",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/networks/vpctest",
                "network_ip": "192.168.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/regions/europe-north1/subnetworks/subnet-0",
                "subnetwork_project": "neon-lock-277111"
              }
            ],
            "project": "neon-lock-277111",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/zones/europe-north1-a/instances/vm-north2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ping",
              "worker"
            ],
            "tags_fingerprint": "hGIvbWYCMGs=",
            "zone": "europe-north1-a"
          },
          "dependencies": [
            "google_compute_network.vpctest",
            "google_compute_subnetwork.subnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "west1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20200429",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/zones/europe-west1-d/disks/vm-west1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/neon-lock-277111/zones/europe-west1-d/instances/vm-west1",
            "instance_id": "1734454087160516178",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "QQ1S-L2DEIA=",
            "metadata_startup_script": "#/bin/bash\nyum update -y\nyum install httpd -y\nservice httpd start",
            "name": "vm-west1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.190.195.188",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/networks/vpctest",
                "network_ip": "192.168.1.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/regions/europe-west1/subnetworks/subnet-1",
                "subnetwork_project": "neon-lock-277111"
              }
            ],
            "project": "neon-lock-277111",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/zones/europe-west1-d/instances/vm-west1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ping",
              "web"
            ],
            "tags_fingerprint": "ARn7EDMbcOQ=",
            "zone": "europe-west1-d"
          },
          "dependencies": [
            "google_compute_network.vpctest",
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "west2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20200429",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/zones/europe-west1-d/disks/vm-west2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/neon-lock-277111/zones/europe-west1-d/instances/vm-west2",
            "instance_id": "8038252977060662914",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "QQ1S-L2DEIA=",
            "metadata_startup_script": "#/bin/bash\nyum update -y\nyum install httpd -y\nservice httpd start",
            "name": "vm-west2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.14.133",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/networks/vpctest",
                "network_ip": "192.168.1.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/regions/europe-west1/subnetworks/subnet-1",
                "subnetwork_project": "neon-lock-277111"
              }
            ],
            "project": "neon-lock-277111",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/zones/europe-west1-d/instances/vm-west2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ping",
              "web"
            ],
            "tags_fingerprint": "ARn7EDMbcOQ=",
            "zone": "europe-west1-d"
          },
          "dependencies": [
            "google_compute_network.vpctest",
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpctest",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/neon-lock-277111/global/networks/vpctest",
            "name": "vpctest",
            "project": "neon-lock-277111",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/networks/vpctest"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet0",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-17T00:46:44.843-07:00",
            "description": "Northern subnet",
            "gateway_address": "192.168.0.1",
            "id": "projects/neon-lock-277111/regions/europe-north1/subnetworks/subnet-0",
            "ip_cidr_range": "192.168.0.0/24",
            "name": "subnet-0",
            "network": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/networks/vpctest",
            "private_ip_google_access": false,
            "project": "neon-lock-277111",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/regions/europe-north1/subnetworks/subnet-0"
          },
          "dependencies": [
            "google_compute_network.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-17T00:46:44.785-07:00",
            "description": "Western subnet",
            "gateway_address": "192.168.1.1",
            "id": "projects/neon-lock-277111/regions/europe-west1/subnetworks/subnet-1",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/global/networks/vpctest",
            "private_ip_google_access": false,
            "project": "neon-lock-277111",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/neon-lock-277111/regions/europe-west1/subnetworks/subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpctest"
          ]
        }
      ]
    }
  ]
}